# sherlock

./: ARCHITECTURE_UPDATE.md  BACKEND_API_SPEC.md  BACKEND_EXPLANATION.md  FEATURES.md  README.md  SUPABASE_SETUP.md  WEBSOCKET_BACKEND_GUIDE.md  package.json  pnpm-lock.yaml
.history/components/: problem-solution-comparison_20251029041956.tsx
app/: globals.css  layout.tsx  page.tsx
app/car-dealerships/: page.tsx
app/process/: page.tsx
backend/: .gitignore  CHANGELOG.md  CONFIGURATION.md  ENHANCED_VIDEO_ANALYSIS.md  QUICKSTART.md  README.md  example_usage.py  pyproject.toml  requirements.txt  server.py  test_setup.py
backend/src/agent/: crew.py  main.py
backend/src/agent/config/: agents.yaml  tasks.yaml
backend/src/agent/tools/: __init__.py  blog_analyzer.py  fact_checker.py  gemini_video_analyzer.py  video_downloader.py  youtube_analyzer.py
components/: ai-team-section.tsx  chat-message.tsx  cta-section.tsx  features-section.tsx  footer.tsx  glassmorphism-nav.tsx  hero-section.tsx  instagram-service-section.tsx  problem-solution-section.tsx  processing-background.tsx  roi-calculator-section.tsx  split-screen-before-after.tsx  testimonials-section.tsx  tyre-kickers-section.tsx  url-processor.tsx
lib/: supabase.ts
